# Cpp-Games-Estudos

./: .gitattributes  .gitignore  .gitignore.txt  README.md
Battleship/: Battlehip.cpp  CMakeLists.txt
Battleship/includes/: Utils.cpp  Utils.hpp
Battleship/src/: Battleship.cpp  CMakeLists.txt
Battleship/src/includes/: CMakeLists.txt  Utils.cpp  Utils.hpp
Computacao Grafica/HelloWindows/: HelloWindows.sln
Computacao Grafica/HelloWindows/HelloWindows/: HelloWindows.vcxproj  HelloWindows.vcxproj.filters  Window.cpp
Computacao Grafica/HelloWindows/HelloWindows/x64/Debug/: HelloWindows.exe.recipe  HelloWindows.ilk  vc143.idb
Computacao Grafica/HelloWindows/HelloWindows/x64/Debug/HelloWindows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  HelloWindows.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Computacao Grafica/InputFocus/: InputFocus.sln
Computacao Grafica/InputFocus/InputFocus/: DXUT.h  InputFocus.cpp  InputFocus.vcxproj  InputFocus.vcxproj.filters  Resources.aps  Window.cpp  Window.h
Computacao Grafica/InputFocus/InputFocus/x64/Debug/: InputFocus.exe.recipe  InputFocus.ilk  vc143.idb
Computacao Grafica/InputFocus/InputFocus/x64/Debug/InputFocus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  InputFocus.lastbuildstate  (+6 more)
Computacao Grafica/InputKeys/: InputKeys.sln
Computacao Grafica/InputKeys/InputKeys/: DXUT.h  Input.cpp  Input.h  InputKeys.vcxproj  InputKeys.vcxproj.filters  Resources.aps  Window.h  ÏnputKeys.cpp
Computacao Grafica/InputKeys/InputKeys/x64/Debug/: InputKeys.exe.recipe  InputKeys.ilk  vc143.idb
Computacao Grafica/InputText/: InputText.sln
Computacao Grafica/InputText/InputText/: Input.cpp  Input.h  InputText.cpp  InputText.vcxproj  InputText.vcxproj.filters  Resources.aps  Resources.rc  Types.h  Window.cpp
Computacao Grafica/InputText/InputText/x64/Debug/: InputText.exe.recipe  InputText.ilk  Resources.res  vc143.idb
Computacao Grafica/WinDXUT/: WinDXUT.sln
Computacao Grafica/WinDXUT/WinDXUT/: App.cpp  App.h  DXUT.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Resources.aps  Timer.cpp  Timer.h  WinDXUT.cpp  WinDXUT.vcxproj  WinDXUT.vcxproj.filters  Window.cpp  Window.h
Computacao Grafica/WinDXUT/WinDXUT/x64/Debug/: WinDXUT.exe.recipe  WinDXUT.ilk  vc143.idb
Curses/: CMakeLists.txt  Curses.cpp  CursesExample.cpp
Curses/Utils/: CursesUtils.cpp  CursesUtils.hpp
Exercises/: CMakeLists.txt  Calculator.cpp  GameOfEight.cpp  PigLatin.cpp  StringClass.cpp  TicTacToe.cpp  Time.cpp  exerciseArray1.cpp  exerciseArray2.cpp  exerciseArray3.cpp  exerciseArray4.cpp  exerciseDollars.cpp  exerciseDynamicMemory.cpp  exerciseStar1.cpp  exerciseStar2.cpp  exerciseSwap.cpp  fraction.cpp
Exercises/LineRotation/: Setup.cpp
Exercises/LineRotation/src/Graphics/: Screen.cpp
Exercises/LineRotation/src/Utils/: Vec2D.cpp  Vec2D.h
Exercises/Star/: Star.sln
Exercises/Star/Star/: Star.cpp  Star.h  Star.vcxproj  Star.vcxproj.filters
Exercises/Star/Star/x64/Debug/: Star.exe.recipe  Star.ilk  vc143.idb
Exercises/Star/Star/x64/Debug/Star.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Star.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Exercises/Star/src/: Setup.cpp
Exercises/Star/src/Graphics/: Screen.cpp  Screen.h  ScreenBuffer.cpp
Exercises/Star/src/Shapes/: Star.cpp  Star.h
Exercises/Star/src/Utils/: Utils.cpp  Utils.h
File_IO/: CMakeLists.txt
File_IO/src/: CMakeLists.txt  FileIO.cpp
File_IO/src/includes/: Utils.cpp  Utils.hpp
Hangman/: CMakeLists.txt  Hangman.cpp
Hangman/includes/: Utils.cpp  Utils.hpp
Hangman/src/: CMakeLists.txt  Hangman.cpp
Math/: ArcadeApp.cpp  CMakeLists.txt
Math/includes/: Utils.cpp  Utils.hpp  Vec2D.cpp  Vec2D.hpp
SDL2/: .gitattributes  CMakeLists.txt  CMakeSettings.json  Setup.cpp
SDL2/Graphics/: Color.h  Screen.cpp
SDL2/Tetris - Lekaum Edition/Tetris - Lekaum Edition/Assets/: Scores.txt
SDL2/Utils/: Utils.cpp  Vec2D.cpp
SDL2/src/App/: App.cpp  App.h  Button.cpp  Button.h  ButtonOptionsScene.cpp  ButtonOptionsScene.h
SDL2/src/Games/: BreakOut.cpp  BreakOut.h  Game.h
SDL2/src/Games/Asteroids/: Asteroids.cpp  Asteroids.h  Bullet.cpp  Bullet.h  Comet.cpp  Comet.h  Ship.cpp  Ship.h
SDL2/src/Games/BreakOut/: Ball.cpp  Ball.h  Block.cpp  Block.h  BoundaryEdge.h  BreakOut.cpp  BreakOut.h  BreakoutGameLevel.cpp  BreakoutGameLevel.h  Excluder.cpp  Excluder.h  LevelBoundary.cpp  LevelBoundary.h  Paddle.cpp  Paddle.h
SDL2/src/Games/Pacman/: Actor.cpp  Actor.h  GhostAI.cpp  GhostAI.h  GhostPacman.cpp  GhostPacman.h  Pacman.cpp  Pacman.h  PacmanGame.cpp  PacmanGame.h  PacmanGameUtils.cpp  PacmanGameUtils.h  PacmanLevel.cpp  PacmanLevel.h
SDL2/src/Games/Tetris/: Blocks.cpp  Blocks.h  Collider.cpp  Collider.h  Ghost.cpp  Ghost.h  Playfield.cpp  Playfield.h  Tetris.cpp  Tetris.h  Tetromino.cpp  Tetromino.h
SDL2/src/Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AnimationPlayer.cpp  AnimationPlayer.h  BMPImage.cpp  BMPImage.h  BitmapFont.cpp  BitmapFont.h  Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h  SpriteSheet.cpp  SpriteSheet.h
SDL2/src/Input/: GameController.cpp  GameController.h  InputAction.h  InputController.cpp  InputController.h
SDL2/src/Scenes/: ArcadeScene.cpp  ArcadeScene.h  ButtonOptionsScene.cpp  ButtonOptionsScene.h  GameScene.cpp  GameScene.h  NotImplementedScene.cpp  NotImplementedScene.h  Scene.h  SelectNameScene.cpp  SelectNameScene.h  ShowScoreScene.cpp  ShowScoreScene.h
SDL2/src/Scenes/Pacman/: PacmanStartScene.cpp  PacmanStartScene.h
SDL2/src/Shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
SDL2/src/Utils/: FileCommandLoader.cpp  FileCommandLoader.h  ScoreFileLoader.cpp  ScoreFileLoader.h  Sound.cpp  Sound.h  Utils.cpp  Utils.h  Vec2D.h
TextInvaders/: .gitignore  CMakeLists.txt  CursesUtils.cpp  CursesUtils.hpp  TextInvaders.cpp  TextInvaders.hpp
dynamic_memory/: DynamicArray.cpp
(+35 files in other folders)
