cmake_minimum_required(VERSION 3.17)
project(exercises)

add_executable(Dollar_Exercise ./exerciseDollars.cpp)
add_executable(Star_Exercise1 ./exerciseStar1.cpp)
add_executable(Star_Exercise2 ./exerciseStar2.cpp)
add_executable(Game_of_Eight ./GameOfEight.cpp)
add_executable(Swap_Exercise ./exerciseSwap.cpp)
add_executable(Array_Exercise1 ./exerciseArray1.cpp)
add_executable(Array_Exercise2 ./exerciseArray2.cpp)
add_executable(Array_Exercise3 ./exerciseArray3.cpp)
add_executable(Array_Exercise4 ./exerciseArray4.cpp)
add_executable(DynamicMemory_Exercise ./exerciseDynamicMemory.cpp)
add_executable(TicTacToe ./TicTacToe.cpp)
add_executable(Calculator ./Calculator.cpp)
add_executable(PigLatin ./PigLatin.cpp)
add_executable(Timer ./Time.cpp)
add_executable(Fraction ./fraction.cpp)
